# ChangeLog for media-gfx/fb-photo-uploader
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Dec 2008; Serkan Kaba <serkan@gentoo.org>
  -fb-photo-uploader-1.3.3.ebuild,
  -files/fb-photo-uploader-1.3.3-gentoo.patch,
  +fb-photo-uploader-1.4.1.ebuild,
  +files/fb-photo-uploader-1.4.1-gentoo.patch:
  Version bump.

  14 Aug 2008; Jesse Farinacci <jieryn@gmail.com> +metadata.xml:
  creating metadata.xml to shut up repoman

  02 Jun 2008; Petteri Räty <betelgeuse@gentoo.org>
  fb-photo-uploader-1.3.3.ebuild:
  Keyword ~x86.
