@@ -1,5 +1,5 @@
 AUX fb-photo-uploader-1.4.1-gentoo.patch 5362 RMD160 5995f14b26a6d1a54339ba91e8c8512269b9182c SHA1 3773da16f2ea043c6f7f833817c65b395d1202d1 SHA256 5f5dc477d478f38ec79cc35fa210bf90f8b42f32230b7eb161f8cff7419d3ffe
 DIST fb-photo-uploader-1.4.1.tar.bz2 172231 RMD160 a2bbaf99bb4bccbb87bb4b79dc9ef71b6420d298 SHA1 f31693ea4b1dbebc407ac6452756976fd6e28db7 SHA256 6abc40f49a723494034cad0308ef1821d13d8fedeec69eda51920946c22cee98
-EBUILD fb-photo-uploader-1.4.1.ebuild 1747 RMD160 2f49b8a44b7ec15c41988a1422d2b986b8dca11e SHA1 5031b7c2c93637fedff8b30737b63ae2560053de SHA256 d4636a4ffca5ff567167f49bce83352c788abec9077596cc599b4314ca34df8a
+EBUILD fb-photo-uploader-1.4.1.ebuild 1742 RMD160 4ac17f6eee8f3cd4db4842af086713b4b9a0ce4c SHA1 c9b1c348828b77074722328e968b6c50280de55b SHA256 f5969ca6e7c07d3b830433ec9252481bc28a57c63dd90b2fbafedfa6b649d77c
 MISC ChangeLog 569 RMD160 2a98f816f6ba48c7ec97749914ab1cfe5a94f663 SHA1 aa9e4795e9fc49862ac4089b7011c6d6bbd07c5d SHA256 aeaf95c8c2d7d1db56f89a9224a704778fa8b8946031c544230e4dffd197c2ca
 MISC metadata.xml 240 RMD160 2def2adcaf4097f82b8774f643ca8eaa3743c800 SHA1 18445fa0bcdfcbda0bdc405de68121ce89f0aad3 SHA256 5b335cf29579b6993ca825615feb6d72b5be9f906b358d571644ea24b20e046b
