@@ -1,5 +1,5 @@
 AUX gentoo-1.1.2.patch 5018 RMD160 50da49bdf798e345f40813c9ad964f4ecb48fd99 SHA1 a823443e0afd5cbc0043525c1391ea767620fa30 SHA256 5a42b77b624507b870f21206901a873fb5f568b747028ac63568f08170c8e641
 DIST juploadr-1.1.2.tar.bz2 526904 RMD160 f58397557012b4f9fba1a43bfda8caa4b66f6b15 SHA1 5675c37fd1cdd38699c37db499ff63396f845758 SHA256 4a7f734d3cd41feed7e5ef83035713746c95117176a69156927bbf61b53ee722
-EBUILD juploadr-cvs-1.1.2.ebuild 1725 RMD160 2a9537d6b999fe8ec7bb7a33eebf8e49ae5c298a SHA1 4e3042a6baa4b6608f44d8983dc89ed4652e27cd SHA256 b458f8fb36beae1e1d8ddc7c7e350b2ac40233906a03a8b265b92da02a568ad6
+EBUILD juploadr-cvs-1.1.2.ebuild 1722 RMD160 8a2c4267b57c5641398ac5ecf2cb1753a97ddbf5 SHA1 cd9926ebd6ec385ce9d55713e4172fb0c79f0b40 SHA256 423c86baa1b1c31103b9f3ed9739eec41129fe7356678e46d43ca86705710164
 MISC ChangeLog 332 RMD160 b62d7e24481c6e5ce7180fcd9c820df42d8f21ef SHA1 49054745c3a812c2aa139b633db13eefdcabc819 SHA256 5a959a494992227de41d1acd1f35e60b1e15652f79290f7e8e1f855f1d46385f
 MISC metadata.xml 258 RMD160 1f199b02264de0aa41228ebb9b1abbd990035336 SHA1 ce32591422efdf5f94238898e9778a0d5ede9b9c SHA256 99e363e12a495824b56162c269d0b4590aa091c3a86b432fdfaf739146ca7f8c
