@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/juploadr-cvs
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  04 Feb 2009; Alistair Bush <ali_bush@gentoo.org>
+  juploadr-cvs-1.1.2.ebuild:
+  QA. Drop keywords due to missing deps.
 
   14 Aug 2008; Jesse Farinacci <jieryn@gmail.com> +metadata.xml:
   creating metadata.xml to shut up repoman
