@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/fb-photo-uploader
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  04 Feb 2009; Alistair Bush <ali_bush@gentoo.org>
+  fb-photo-uploader-1.4.1.ebuild:
+  QA. Drop keywords due to missing deps.
 
   21 Dec 2008; Serkan Kaba <serkan@gentoo.org>
   -fb-photo-uploader-1.3.3.ebuild,
